# gairun

./: .gitignore  Cargo.toml  README.md
assets/blocks/: block.ron
assets/maps/collection/: 1.ron  2.ron  3.ron  4.ron
assets/settings/: config.ron  settings.sets
assets/sounds/: main_menu.flac
old/: Console.java  Game.java  Player.java
old/controllers/: BackgroundController.java  MapController.java  TextureController.java
old/interfaces/: GameValues.java  Texture.java
res/data/backgrounds/: rabet.json
res/data/block/: brick_left.json  default_block.json  default_block_noclip.json  ice.json
res/data/blocks/: brick.json  brick_left.json  brick_right.json  default_block.json  default_block_move.json  default_block_noclip.json  error.json  glue.json  ice.json  light_pad.json
res/data/player/: idle.json  walk.json
res/maps/: 1.csv  mapPack.json  maps.json
res/maps/main/: 1.csv  1.json  2.csv  2.json  3.csv  3.json  a.csv  a.json
res/maps/menu/: main_menu.csv  main_menu.json  start.csv  start.json
res/maps/side/: 3.csv
res/minscripts/ice/: Main.java
res/textures/: ice.json  lightPads.json  player.json  test.json
res/textures/player/: idle.json  walk.json
src/: asset_loader.rs  camera.rs  entity.rs  global.rs  main.rs  main_menu.rs  menu.rs  settings.rs  toasts.rs
src/com/gairun/: Camera.java  Console.java  Game.java  MinscriptManager.java  Player.java  Window.java
src/debug/: console.rs  debug.rs  debug_lines.rs  mod.rs
src/loaders/: asset_loader.rs  mod.rs  preload.rs  setup.rs  setup_icon.rs  setup_settings.rs  setup_sound.rs  setup_window.rs
src/mapper/: blocks.rs  map_generator.rs  mod.rs
src/menus/: main_menu.rs  mod.rs
src/presence/: mod.rs
src/ui/: mod.rs  toasts.rs
src/ui/menus/: ingame_menu.rs  main_menu.rs  mod.rs
(+52 files in other folders)
