[package]
name = "gairun"
version = "0.0.1"
edition = "2021"
authors = ["LempekPL", "wiKapo"]
homepage = "gairun.lempek.dev"
repository = "https://github.com/LempekPL/gairun"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_asset_loader = "0.9.0"
bevy_kira_audio = { version = "0.8.0", features = [ "flac" ] }
image = "0.24.1"
ron = "0.7.0"
serde = "1.0.136"
winit = "0.26.1"