[package]
name = "gairun"
version = "0.0.1"
edition = "2021"
authors = ["LempekPL", "wiKapo"]
homepage = "gairun.lempek.dev"
repository = "https://github.com/LempekPL/gairun"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["serialize"] }
bevy_asset_loader = { version = "0.15.0", features = ["2d", "serde"] }
bevy_kira_audio = { version = "0.15.0", features = ["flac"] }
bevy_console = "0.7.0"
bevy-inspector-egui = "0.18.1"
bevy_egui = "0.20.1"
bevy_prototype_debug_lines = "0.10.1"
image = "0.24.5"
ron = "0.8.0"
serde = "1.0.156"
winit = "0.28.3"
clap = "4.1.10"
